syntax = "proto3";

package todo;

option go_package = "./todo";

// types: -----------------------------------------------------------------------
message Todo {
    string id = 1;
    string title = 2;
    string description = 3;
    bool isCompleted = 4;
    string dueDate = 5;
}

// messages: --------------------------------------------------------------------
message GetTodoRequest {
    string id = 1;
}

message GetTodoResponse {
    Todo todo = 1;
}

message GetTodosRequest {
    string userId = 1;
}

message GetTodosResponse {
    repeated Todo todos = 5;
}

message PutTodoRequest {
    string title = 1;
    string description = 2;
    string dueDate = 3;
    bool isCompleted = 4;
}

message PutTodoResponse {
    int32 status = 1;
}

message SetIsCompletedRequest {
    string id = 1;
    bool isCompleted = 2;
}

// services: --------------------------------------------------------------------
service TodoService {
    rpc GetTodo (GetTodoRequest) returns (GetTodoResponse);
    rpc GetTodos (GetTodosRequest) returns (GetTodosResponse);
    rpc PutTodo (PutTodoRequest) returns (PutTodoResponse);
    rpc SetIsCompleted (SetIsCompletedRequest) returns (Todo);
}



